--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       stopBtn.addEventListener('click', () => Pd.stop());
 
       const renderPdFile = async function () {
-        const response = await fetch('./patches/myPatch02.pd');
+        const response = await fetch('patches/myPatch02.pd');
         const responseText = await response.text();
         console.log(responseText);
         const patchObjects = await pdfu.parse(responseText);
