--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
         // Pd.start();
       });
     </script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
-    <button class="start_btn">Start</button>
-    <button class="stop_btn">Stop</button>
-    <h1>
-      <div id="title">Random Pitches</div>
-    </h1>
-    <div id="svg"></div>
+    <div class="container">
+      <h1>Random Pitches</h1>
+      <div class="main">
+        <div class="buttons">
+          <button class="start_btn">Start</button>
+          <button class="stop_btn">Stop</button>
+        </div>
+        <div id="svg"></div>
+      </div>
+    </div>
     <script>
       const startBtn = document.querySelector('.start_btn');
       startBtn.addEventListener('click', () => Pd.start());
